# exercises

./: .gitignore  README.md
.github/workflows/: ci.yml  rust.yml
advent-of-code-2021/: README.md  build.zig  build.zig.zon  devbox.json
advent-of-code-2021/.flox/: env.json
advent-of-code-2021/.flox/env/: manifest.toml
advent-of-code-2021/src/: day01.zig  main.zig
advent-of-code-2024/: Cargo.toml  README.md  devbox.json
advent-of-code-2024/.flox/: env.json
advent-of-code-2024/.flox/env/: manifest.toml
advent-of-code-2024/benches/: day01.rs  day02.rs  day03.rs  days.rs
advent-of-code-2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  main.rs  memory.rs
