[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
criterion = "0.5"

[lints.clippy]
complexity = "warn"
correctness = "warn"
nursery = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"


[[bench]]
name = "day01"
harness = false

[[bench]]
name = "day02"
harness = false
